# python_adhoc_template

./: README.md  pyproject.toml  tox.ini
